apis/shopper-baskets/examples/error/customer-basket-quota-exceeded-exception.raml
#%RAML 1.0 NamedExample
value:
  {
    "title": "Customer Baskets Quota Exceeded",
    "type": "https://api.commercecloud.salesforce.com/documentation/error/v1/errors/customer-baskets-quota-exceeded",
    "detail": "The maximum number of baskets per customer was exceeded. Please reuse or delete one of the existing baskets (40e91e04aba6e42a6836f79308).",
    "basketIds": "40e91e04aba6e42a6836f79308"
}